; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_filt_spectouch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_filt_spectouch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32 }
%struct.kevent_internal_s = type { i32, i32, i32 }

@EV_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @filt_spectouch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_spectouch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.knote*, align 8
  %5 = alloca %struct.kevent_internal_s*, align 8
  store %struct.knote* %0, %struct.knote** %4, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %5, align 8
  %6 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %5, align 8
  %7 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.knote*, %struct.knote** %4, align 8
  %10 = getelementptr inbounds %struct.knote, %struct.knote* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %5, align 8
  %12 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.knote*, %struct.knote** %4, align 8
  %15 = getelementptr inbounds %struct.knote, %struct.knote* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %5, align 8
  %17 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @EV_ENABLE, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load %struct.knote*, %struct.knote** %4, align 8
  %24 = call i32 @spec_knote_select_and_link(%struct.knote* %23)
  store i32 %24, i32* %3, align 4
  br label %26

25:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %22
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @spec_knote_select_and_link(%struct.knote*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
